# CAScript-Native

./: .gitmodules  CMakeLists.txt
include/binding/: BinaryOperatorType.h  Binder.h  BoundBinaryExpression.h  BoundBinaryOperator.h  BoundExpression.h  BoundLiteralExpression.h  BoundNode.h  BoundTernaryExpression.h  BoundTernaryOperator.h  BoundType.h  BoundUnaryExpression.h  BoundUnaryOperator.h  README.md  TernaryOperatorType.h  Type.h  UnaryOperatorType.h
include/runtime/: Evaluator.h
include/syntax/: BinaryExpression.h  ExpressionSyntax.h  IdentifierExpression.h  Lexer.h  LiteralExpression.h  ParenthesizedExpression.h  Parser.h  README.md  SyntaxNode.h  SyntaxType.h  TernaryExpression.h  Token.h  TokenType.h  UnaryExpression.h
src/: main.cpp
src/binding/: Binder.cpp
src/runtime/: Evaluator.cpp
src/syntax/: Lexer.cpp  Parser.cpp
